--- a/members.html
+++ b/members.html
@@ -83,7 +83,7 @@
             <div class="row justify- mt-4">
                 <div class="col-md-4">
                     <div class="text-center p-4 border rounded">
-                        <a href="all-memberss.html" class="btn btn-primary">View all Members</a>
+                        <a href="contact-members.html" class="btn btn-primary">View all Members</a>
                     </div>
                 </div>
             </div>
@@ -94,7 +94,6 @@
         <div class="container text-center">
             <p>© 2025 Economics Club. All rights reserved.</p>
             <div class="social-links">
-                <a href="#"><i class="fab fa-twitter"></i></a>
                 <a href="#"><i class="fab fa-linkedin"></i></a>
                 <a href="#"><i class="fab fa-instagram"></i></a>
             </div>
