--- a/all-memberss.html
+++ b/all-memberss.html
@@ -25,14 +25,6 @@
             margin-bottom: 10px;
         }
 
-        .info-box {
-            background-color: #f8f9fa; /* Light gray background for the box */
-            border: 1px solid #ccc; /* Light border for the box */
-            border-radius: 5px; /* Rounded corners */
-            padding: 20px;
-            margin-bottom: 20px;
-        }
-
         .contact-info {
             margin-bottom: 20px;
         }
@@ -69,7 +61,7 @@
     </style>
 </head>
 <body>
-
+    <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="container">
             <a class="navbar-brand" href="/"><i class="fas fa-chart-line me-2"></i>Economics Club</a>
@@ -89,47 +81,35 @@
         </div>
     </nav>
 
-
+    <!-- Home Button -->
     <div class="container home-button">
         <a href="index.html" class="btn btn-primary">Home</a>
     </div>
 
-
+    <!-- Contact & Members Section -->
     <section class="py-5 mt-5">
         <div class="container">
             <h2 class="section-title">Contact Us</h2>
-            <div class="info-box">
-                <div class="contact-info">
-                    <p>Email: West-Hatch-Economic-Club@outlook.com</p>
-                    <p>Follow us on social media!</p>
-                    <div class="social-links">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-linkedin"></i></a>
-                    </div>
+            <div class="contact-info">
+                <p>Email: westhatchchcss@gmail.com</p>
+                <p>Follow us on social media!</p>
+                <div class="social-links">
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-linkedin"></i></a>
                 </div>
-
-                <h2 class="section-title">Our Members:</h2>
-                <ul class="member-list">
-                    <li>Harsha Kharat</li>
-                    <li>Samuel Douek</li>
-                    <li>Elena Dragan</li>
-                    <li>Divij Mekala</li>
-                    <li>Hannah Javed</li>
-                    <li>David Tondu</li>
-                    <li></li>
-                    <li></li>
-                    <li>Ulus Ertac</li>
-                    <li></li>
-                    <li>Aneve Atwal</li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                </ul>
             </div>
+
+            <h2 class="section-title">Our Members:</h2>
+            <ul class="member-list">
+                <li>Harsha Kharat</li>
+                <li>Samuel Douek</li>
+                <li>Elena Dragan</li>
+                <li>Divij Mekala</li>
+            </ul>
         </div>
     </section>
 
-
+    <!-- Footer -->
     <footer class="py-4">
         <div class="container text-center">
             <p>© 2025 Economics Club. All rights reserved.</p>
